[package]
name = "misery_loves_company_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.6"
serde_json = "1.0.105"
reqwest = { version = "0.11.18", features = ["blocking"] }

#[build-dependencies]
#misery_loves_company_bot = { git = "https://github.com/cameroncros/misery_loves_company_bot.git" }
